--- a/css/resume.css
+++ b/css/resume.css
@@ -22,11 +22,6 @@ body {
 }
 
 
-
-h1.nom {
-    font-family: roboto;
-}
-
 .social-media-icons ul {
     list-style: none;
     padding: 0;
@@ -72,22 +67,72 @@ header {
     height: 120px;
 }
 
-header h1 {
-    color: brown;
-    font-size: 1.5em;
-    width: 90%;
-    margin: 0 auto;
-}
 
 footer {
     border-top: 2px solid #fff;
     background: url("../img/background.jpg");
 }
 
+/*STYLES GENERAUX*/
+* {
+    font-family: Avenir, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    text-align: justify;
+    box-sizing: border-box;
+}
+
+body {
+    background: #ededed;
+}
+
+p {
+    font-size: 1em;
+    line-height: 1.5em;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+/*HEADER & FOOTER*/
+header,
+footer {
+    width: 100%;
+    padding: 20px 0px;
+    background: url("../img/background.jpg") #4f4f4f;
+    box-shadow: 0px 0px 15px #333;
+}
+
+header {
+    border-bottom: 2px solid #fff;
+    height: 120px;
+}
+
+header h1,
+header h2 {
+    font-family: 'roboto';
+    color: brown;
+    font-size: 1.5em;
+    width: 90%;
+    margin: 0 auto;
+}
+
+header h2 {
+    color: navy;
+    font-size: 1.2em;
+    width: 90%;
+}
+
+footer {
+    border-top: 2px solid #fff;
+}
+
 footer p {
     width: 90%;
     margin: 0 auto;
-    color: #FFF;
+    color: #fff;
     text-align: center;
 }
 
@@ -95,13 +140,15 @@ footer a {
     color: #fff;
 }
 
-/* sections CSS */
+/*SECTIONS*/
 section {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     width: 100%;
     padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin: 20px auto;
     box-shadow: 0px 0px 10px #bbb;
     background-color: #fff;
@@ -110,12 +157,14 @@ section {
 section h2 {
     margin: 20px 0;
     width: 90%;
+    color: navy;
 }
 
 section>div {
     width: 90%;
 }
 
+/*SECTION INFOS*/
 .photo {
     text-align: center;
 }
@@ -129,7 +178,47 @@ section>div {
     margin-top: -80px;
 }
 
-/* experiences css */
+.prez {
+    border-bottom: 2px dashed #ccc;
+}
+
+.prez a {
+    display: block;
+    text-align: center;
+    padding: 10px;
+    margin: 10px auto 30px auto;
+    color: #fff;
+    background-color: #EA0;
+    box-shadow: 0px 0px 10px #ccc;
+    border-radius: 5px;
+}
+
+.contact-flex {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.contact-flex p:first-child {
+    flex: 0 0 40%;
+}
+
+.contact-flex p:last-child {
+    flex: 0 0 60%;
+}
+
+.social {
+    display: flex;
+    justify-content: space-around;
+    margin: 10px auto 0px auto;
+}
+
+.social img {
+    width: 40px;
+    height: 40px;
+}
+
+/*SECTION EXP ET FORMATION*/
 .exp {
     display: flex;
     flex-flow: row wrap;
@@ -158,12 +247,17 @@ section>div {
 }
 
 .exp h3 {
-    font-size: 1.3em;
+    font-size: 1.2em;
 }
 
 .exp h4 {
     font-size: 1em;
     font-weight: normal;
+}
+
+/*SECTION COMPETENCES*/
+.h3gauche {
+    width: 90%;
 }
 
 .comp {
@@ -208,6 +302,7 @@ section>div {
 .c100 {
     width: 100%;
     background-color: #4B8;
+    border-radius: 5px;
 }
 
 .comp2 {
@@ -224,6 +319,7 @@ section>div {
     background-color: grey;
 }
 
+/*SECTION INTERETS*/
 .interet {
     flex: 0 1 50%;
     display: flex;
